--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -103,5 +103,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Logout" />
+        <Button
+            android:id="@+id/buttonLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="LogIn" />
     </LinearLayout>
 </RelativeLayout>
