--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -107,6 +107,6 @@
             android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="LogIn" />
+            android:text="LogIn1" />
     </LinearLayout>
 </RelativeLayout>
